fix dyeable recursive stale pattern cache